[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/UI.gd" type="Script" id=2]
[ext_resource path="res://UI/HPx4.png" type="Texture" id=3]
[ext_resource path="res://UI/HPManager.gd" type="Script" id=4]
[ext_resource path="res://UI/OptionM.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/FPSLabel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends TextureRect

"

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PauseB" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1008.0
margin_top = 12.0
margin_right = -911.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="Life" type="Control" parent="."]
anchor_left = 0.035
anchor_top = 0.117
anchor_right = 0.035
anchor_bottom = 0.117
margin_left = 413.16
margin_top = 175.8
margin_right = 539.16
margin_bottom = 283.8
script = ExtResource( 4 )

[node name="HP" type="TextureRect" parent="Life"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -447.0
margin_top = -185.0
margin_right = -321.0
margin_bottom = -77.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
script = SubResource( 3 )

[node name="DiedM" type="ColorRect" parent="Life"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -446.0
margin_top = -245.0
margin_right = 450.0
margin_bottom = 247.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Label" type="Label" parent="Life/DiedM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -172.0
margin_right = 105.0
margin_bottom = -137.0
custom_fonts/font = SubResource( 2 )
text = "MODAR"
align = 1

[node name="ContinueB" type="Button" parent="Life/DiedM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -85.0
margin_right = 71.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="MainMB" type="Button" parent="Life/DiedM"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -66.0
margin_top = -67.0
margin_right = 77.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="PausedM" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Label" type="Label" parent="PausedM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -172.0
margin_right = 105.0
margin_bottom = -137.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1

[node name="ResumeB" type="Button" parent="PausedM"]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -48.5
margin_top = -16.5
margin_right = 48.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "Pause"

[node name="POptionB" type="Button" parent="PausedM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -16.5
margin_right = 48.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "Option"

[node name="MainMB" type="Button" parent="PausedM"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -48.5
margin_top = -16.5
margin_right = 53.5
margin_bottom = 18.5
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="OptionM" parent="." instance=ExtResource( 5 )]
visible = false

[node name="FPSLabel" parent="." instance=ExtResource( 6 )]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -42.0
margin_right = 0.0

[connection signal="pressed" from="PauseB" to="." method="_on_PauseB_pressed"]
[connection signal="pressed" from="Life/DiedM/ContinueB" to="." method="_on_ContinueB_pressed"]
[connection signal="pressed" from="Life/DiedM/MainMB" to="." method="_on_MainMB_pressed"]
[connection signal="pressed" from="PausedM/ResumeB" to="." method="_on_ResumeB_pressed"]
[connection signal="pressed" from="PausedM/POptionB" to="." method="_on_POptionB_pressed"]
[connection signal="pressed" from="PausedM/MainMB" to="." method="_on_MainMB_pressed"]
